src/objects/Vacancy__c.object
<CustomObject>
    <fields>
        <fullName>Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Candidate proposed for this vacancy by recruiter (Only candidates with &quot;Validated by HR&quot; status)</description>
        <label>Candidate</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Candidate__c.Status__c</field>
                <operation>equals</operation>
                <value>Validated by HR</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>Vacancies</relationshipLabel>
        <relationshipName>Vacancies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaysLeftToClose__c</fullName>
        <description>Indicates how many days is left to StartDate</description>
        <formula>TODAY() - StartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Left To Close</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysOpen__c</fullName>
        <description>Indicates how many days the vacancy is open</description>
        <formula>TODAY () - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Vacancy brief description</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <description>Required technical level</description>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>d0</fullName>
                </value>
                <value>
                    <fullName>d1</fullName>
                </value>
                <value>
                    <fullName>d2</fullName>
                </value>
                <value>
                    <fullName>d3</fullName>
                </value>
                <value>
                    <fullName>d4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PromoDescription__c</fullName>
        <description>This field contains information about vacancy which will be displayed on public Promo Site</description>
        <label>Promo Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublishOnPromoSite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether to publish this Vacancy on Promo Site</description>
        <label>Publish On Promo Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Recruiter who accepted this vacancy and is responsible for search (Only Recruiter role can be assigned)</description>
        <label>Responsible</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>Recruiter</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Vacancies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>Vacancy planned start date</description>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Vacancy status, &quot;New&quot; and &quot;In-Process&quot; are set by the system. &quot;Cancelled&quot; and &quot;Closed&quot; are available only when the vacancy is already saved and can be edited only by the Manager who opened the vacancy</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In-Process</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Title of the vacancy</description>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Vacancy</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Responsible__c</columns>
        <columns>Candidate__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>V-{0000}</displayFormat>
        <label>Vacancy ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vacancies</pluralLabel>
    <recordTypes>
        <fullName>Test</fullName>
        <active>true</active>
        <label>Test</label>
    </recordTypes>
    <recordTypes>
        <fullName>With_button</fullName>
        <active>true</active>
        <label>With button</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>